--- a/sten.css
+++ b/sten.css
@@ -138,6 +138,7 @@ a:hover {
 
 .floatRight {
     float: right;
+    margin: 0px 10px;
 }
 
 .disscount {
@@ -182,7 +183,7 @@ a:hover {
 }
 
 .caption div {
-    padding: 10px;
+    padding: 0px 10px;
 }
 
 .disscount .pinkDisscount {
